place social media icons in a grid to place the locations static in order to stop layout shifts

--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -85,4 +85,33 @@
     .directory-content {
         grid-template-columns: repeat(auto-fit, minmax(16rem, 1fr));
     }
+    .social {
+        display: grid;
+        grid-template-columns: auto repeat(4, 1fr) auto;
+        grid-template-rows: auto 1fr auto;
+        gap: 10px;
+        margin: 10px;
+        justify-content: center;
+    }
+    .social-links {
+        width: 44px;
+        height: auto;
+    }
+    .facebook {
+        grid-column: 2;
+        grid-row: 2;
+    }
+    .instagram{
+        grid-column: 3;
+        grid-row: 2;
+    }
+    .twitter{
+        grid-column: 4;
+        grid-row: 2;
+    }
+    .linkedin{
+        grid-column: 5;
+        grid-row: 2;
+    }
+
 }
